packages/blocks-next/src/blocks/product-template/style.scss
.sc-product-item {
	height: 100%;
	box-sizing: border-box;

	&.sc-has-animation-fade-up {
		opacity: 0;
		animation-duration: var(--sc-transition-fast);
		animation-fill-mode: both;
		animation-name: fadeInUp;
		animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	}
}

.sc-product-item-link {
	box-sizing: border-box;
	display: block;
	text-decoration: none !important;

	&:focus:not(:focus-visible) {
		outline: none;
	}
}

@keyframes fadeInUp {
	from {
		opacity: 0;
		transform: translate3d(0, 20px, 0);
	}

	to {
		transform: translate3d(0, 0, 0);
		opacity: 1;
	}
}

@media (prefers-reduced-motion) {
	.sc-product-item {
		opacity: 1;
		animation-name: none;
	}
}

